--- a/sc_tutorial_environment.yml
+++ b/sc_tutorial_environment.yml
@@ -36,10 +36,10 @@ dependencies:
  - pip
  - pip:
    - MulticoreTSNE
-   - anndata
+   - anndata==0.6.21
    - fa2
    - gprofiler-official
-   - scanpy
+   - scanpy==1.4.3
    - rpy2
    - git+https://github.com/flying-sheep/anndata2ri
    
